--- a/Source/BoogieDriver/BoogieDriver.csproj
+++ b/Source/BoogieDriver/BoogieDriver.csproj
@@ -117,8 +117,8 @@
       <Project>{F75666DE-FB56-457C-8782-09BE243450FC}</Project>
       <Name>Simplify</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Provers\SMTLib\SMTLib.sscproj">
-      <Project>{13C3A68C-462A-4CDA-A480-738046E37C5A}</Project>
+    <ProjectReference Include="..\Provers\SMTLib\SMTLib.csproj">
+      <Project>{9B163AA3-36BC-4AFB-88AB-79BC9E97E401}</Project>
       <Name>SMTLib</Name>
     </ProjectReference>
     <ProjectReference Include="..\Provers\Z3\Z3.csproj">
